navbar mobile fixed + spacing + assets

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,6 @@
-body.no-scroll {
-    position: fixed;
-    overflow-y: hidden;
-    width: 100%;
-}
-
 .container {
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0 20px;
     box-sizing: border-box;
     max-width: 1440px;
     min-width: 250px;
