--- a/src/app/components/experience/experience.component.scss
+++ b/src/app/components/experience/experience.component.scss
@@ -39,7 +39,7 @@
     height: auto;
     max-width: 85%;
     min-height: 130px;
-    padding: 15px 20px;
+    padding: 15px;
     margin: 0 10px 0 20px;
     opacity: 0;
     transform: translateX(97%);
