--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -49,29 +49,45 @@
 }
 
 .navbar-content {
-    position: absolute;
+    z-index: 20;
+    margin: 10px auto;
+    padding-top: 50px;
+    position: fixed;
+    top: 20%;
+    left: 15px;
     display: flex;
-    flex-direction: row;
     width: 90%;
     height: 80vh;
-    max-width: 450px;
+    max-width: 100%;
+    top: 50px;
+    right: 10px;
+    left: 10px;
+    flex-direction: column;
     gap: 20px;
     opacity: 0;
     align-items: center;
     opacity: 0;
-    transform: translateX(-100%);
-    transition: transform .8s ease-in, opacity .5s ease-in;
+    transform: translateX(120%);
+    transition: transform .8s ease-in-out, opacity .5s ease-in;
+    border-radius: 20px;
+    backdrop-filter: blur(10px);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
 
-@media (min-width: 960px) {
-    width: 100vw;
-    height: 80px;
-    opacity: 1;
-    max-width: 1024px;
-    margin: 0 auto;
-    transform: none;
-    justify-content: space-evenly;
-
-}
+    @media (min-width: 960px) {
+        position: absolute;
+        width: 100vw;
+        height: 80px;
+        max-width: 1024px;
+        padding: 0;
+        top: 0;
+        opacity: 1;
+        margin: 0 auto;
+        transform: none;
+        justify-content: space-evenly;
+        backdrop-filter: none;
+        box-shadow: none;
+        flex-direction: row;
+    }
 
     @media (min-width: 1440px) {
         justify-content: space-between;
@@ -80,31 +96,18 @@
 
 .open {
 
-&.navbar-content {
-    z-index: 20;
-    display: flex;
-    position: fixed;
-    margin: 10px auto;
-    padding-top: 50px;
-    top: 50px;
-    left: 10px;
-    right: 10px;
-    flex-direction: column;
-    backdrop-filter: blur(10px);
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
-    opacity: 1;
-    transform: translateX(0);
-}
-
-.navbar-content-item {
-    display: inline;
-
-    &:last-child {
-        margin: 0 auto;
+    &.navbar-content {
+        opacity: 1;
+        transform: translateX(0);
     }
-}
 
+    .navbar-content-item {
+        display: inline;
+
+        &:last-child {
+            margin: 0 auto;
+        }
+    }
 }
 
 .navbar-content-item {
